compiler/testData/diagnostics/tests/callableReference/kt34314.fir.kt
// !DIAGNOSTICS: -UNUSED_VARIABLE

fun main() {
    val x = <!TYPE_INFERENCE_NO_INFORMATION_FOR_PARAMETER, TYPE_INFERENCE_NO_INFORMATION_FOR_PARAMETER!>run<!> { ::run } // no error
}
